<resources>
    <string name="app_name">Start Shopping</string>
    <string name="sitio">Sitio</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_category">Categorias</string>
    <string name="title_account">Cuenta</string>

    /* Strings Activity Auth*/
    <string name="EditTextEmail">Correo</string>
    <string name="EditTextName">Nombre</string>
    <string name="EditTextPass">Contraseña</string>
    <string name="EditTextPassConfirm">Confirmar Contraseña</string>
    <string name="ButtonRegister">Registrarse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entrar">Entrar</string>

    <string name="slogan">Tus productos al alcance de tu bolsillo</string>
    <string name="new_login">crear cuenta</string>

    /* CATEGORIAS */

    <string name="gorros">SOMBREROS</string>
    <string name="gorrosImg">GORROS</string>

    <string name="bolsos">BOLSOS</string>
    <string name="bolsosImg">BOLSOS</string>

    <string name="abrigos">ABRIGOS</string>
    <string name="abrigosImg">ABRIGOS</string>

    <string name="categorias"> CATEGORIAS</string>

    <string name="ropa_interior">ROPA INTERIOR</string>
    <string name="braImg">ROPA INTERIOR</string>

    <string name="calcetas">CALCETAS</string>
    <string name="calcetaImg">CALCETAS</string>

    <string name="mujeres">MUJERES</string>
    <string name="mujerImg">MUJER</string>

    <string name="reloj_y_accesorios">RELOJ Y ACCESORIOS</string>
    <string name="relojImg">RELOJ</string>

    <string name="recomendados">RECOMENDADOS</string>
    <string name="recomendadosImg">RECOMENDADOS</string>

    <string name="calzado">CALZADO</string>
    <string name="zapatosImg">ZAPATOS</string>

    <string name="hombre">HOMBRE</string>
    <string name="hombreImg">HOMBRE</string>

    <string name="poleras">POLERAS</string>
    <string name="polerasImg">POLERAS</string>
    <string name="title_activity_maps1">MapsActivity1</string>
    <string name="marker_detail_latlng">(%1$.2f,%2$.2f)</string>
    <string name="title_activity_map_mi_localizacion">MapMiLocalizacion</string>

</resources>